<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2">
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2">
            <RadioButton
                android:button="@null"
                android:layout_margin="10dp"
                android:text="@string/alarm_method_default"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"/>
            <RadioButton
                android:button="@null"
                android:layout_margin="10dp"
                android:text="@string/alarm_method_sambung_ayat"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2">
            <RadioButton
                android:button="@null"
                android:text="@string/alarm_method_quran_terjemah"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"/>
            <RadioButton
                android:button="@null"
                android:text="@string/alarm_method_terjemah_quran"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                />

        </LinearLayout>

    </RadioGroup>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <android.support.v7.widget.Toolbar
            android:id="@+id/bottom_toolbar"
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/cancel"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/ok"/>
            </LinearLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.CoordinatorLayout>


</LinearLayout>